client/css/styles.css
/* ... */
.datatable-table > tbody > tr > td,
.datatable-table > tbody > tr > th,
.datatable-table > tfoot > tr > td,
.datatable-table > tfoot > tr > th,
.datatable-table > thead > tr > td,
.datatable-table > thead > tr > th {
  vertical-align: top;
  padding: 0.5rem 0.5rem;
}

.datatable-table > thead > tr > th {
  vertical-align: bottom;
  text-align: left;
  border-bottom: none;
}

.datatable-table > tfoot > tr > th {
  vertical-align: bottom;
  text-align: left;
}

.datatable-table th {
  vertical-align: bottom;
  text-align: left;
}

.datatable-table th a {
  text-decoration: none;
  color: inherit;
}

.datatable-sorter {
  display: inline-block;
  height: 100%;
  position: relative;
  width: 100%;
  padding-right: 1rem;
}

.datatable-sorter::before,
.datatable-sorter::after {
  content: "";
  height: 0;
  width: 0;
  position: absolute;
  right: 4px;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  opacity: 0.2;
}

.datatable-sorter::before {
  bottom: 4px;
}

.datatable-sorter::after {
  top: 0px;
}

.asc .datatable-sorter::after,
.desc .datatable-sorter::before {
  opacity: 0.6;
}

.datatables-empty {
  text-align: center;
}

.datatable-top::after,
.datatable-bottom::after {
  clear: both;
  content: " ";
  display: table;
}

.datatable-pagination li.datatable-hidden {
  visibility: visible;
}

.btn-datatable {
  height: 20px !important;
  width: 20px !important;
  font-size: 0.75rem;
  border-radius: 0.375rem !important;
}


.contact-img {
  display: block;
  margin: 0 auto; 
  width: 100px; 
  height: 200px; 
  object-fit: cover; 
}


.col-md-4 {
  text-align: center;
}


.contact-img {
  margin-bottom: 15px; 
}

